go-runner/src/snapshots/go_runner__integration_tests__assert_results_snapshots@golang-benchmarks_3.snap
---
source: src/integration_tests.rs
expression: content
---
{
  "creator": {
    "name": "codspeed-go",
    "version": "0.1.0",
    "pid": "[pid]"
  },
  "instrument": {
    "type": "walltime"
  },
  "benchmarks": [
    {
      "name": "BenchmarkCryptoRand",
      "uri": "random/random_test.go::BenchmarkCryptoRand",
      "config": {
        "warmup_time_ns": null,
        "min_round_time_ns": null,
        "max_time_ns": null,
        "max_rounds": null
      },
      "stats": "[stats]"
    },
    {
      "name": "BenchmarkCryptoRandBytes",
      "uri": "random/random_test.go::BenchmarkCryptoRandBytes",
      "config": {
        "warmup_time_ns": null,
        "min_round_time_ns": null,
        "max_time_ns": null,
        "max_rounds": null
      },
      "stats": "[stats]"
    },
    {
      "name": "BenchmarkCryptoRandString",
      "uri": "random/random_test.go::BenchmarkCryptoRandString",
      "config": {
        "warmup_time_ns": null,
        "min_round_time_ns": null,
        "max_time_ns": null,
        "max_rounds": null
      },
      "stats": "[stats]"
    },
    {
      "name": "BenchmarkMathRand",
      "uri": "random/random_test.go::BenchmarkMathRand",
      "config": {
        "warmup_time_ns": null,
        "min_round_time_ns": null,
        "max_time_ns": null,
        "max_rounds": null
      },
      "stats": "[stats]"
    }
  ]
}
