go-runner/src/snapshots/go_runner__integration_tests__assert_results_snapshots@hugo_1.snap
---
source: src/integration_tests.rs
expression: content
---
{
  "creator": {
    "name": "codspeed-go",
    "version": "0.1.0",
    "pid": "[pid]"
  },
  "instrument": {
    "type": "walltime"
  },
  "benchmarks": [
    {
      "name": "BenchmarkCSSEscaper",
      "uri": "tpl/internal/go_templates/htmltemplate/css_test.go::BenchmarkCSSEscaper",
      "config": {
        "warmup_time_ns": null,
        "min_round_time_ns": null,
        "max_time_ns": null,
        "max_rounds": null
      },
      "stats": "[stats]"
    },
    {
      "name": "BenchmarkCSSEscaperNoSpecials",
      "uri": "tpl/internal/go_templates/htmltemplate/css_test.go::BenchmarkCSSEscaperNoSpecials",
      "config": {
        "warmup_time_ns": null,
        "min_round_time_ns": null,
        "max_time_ns": null,
        "max_rounds": null
      },
      "stats": "[stats]"
    },
    {
      "name": "BenchmarkCSSValueFilter",
      "uri": "tpl/internal/go_templates/htmltemplate/css_test.go::BenchmarkCSSValueFilter",
      "config": {
        "warmup_time_ns": null,
        "min_round_time_ns": null,
        "max_time_ns": null,
        "max_rounds": null
      },
      "stats": "[stats]"
    },
    {
      "name": "BenchmarkCSSValueFilterOk",
      "uri": "tpl/internal/go_templates/htmltemplate/css_test.go::BenchmarkCSSValueFilterOk",
      "config": {
        "warmup_time_ns": null,
        "min_round_time_ns": null,
        "max_time_ns": null,
        "max_rounds": null
      },
      "stats": "[stats]"
    },
    {
      "name": "BenchmarkDecodeCSS",
      "uri": "tpl/internal/go_templates/htmltemplate/css_test.go::BenchmarkDecodeCSS",
      "config": {
        "warmup_time_ns": null,
        "min_round_time_ns": null,
        "max_time_ns": null,
        "max_rounds": null
      },
      "stats": "[stats]"
    },
    {
      "name": "BenchmarkDecodeCSSNoSpecials",
      "uri": "tpl/internal/go_templates/htmltemplate/css_test.go::BenchmarkDecodeCSSNoSpecials",
      "config": {
        "warmup_time_ns": null,
        "min_round_time_ns": null,
        "max_time_ns": null,
        "max_rounds": null
      },
      "stats": "[stats]"
    },
    {
      "name": "BenchmarkEscapedExecute",
      "uri": "tpl/internal/go_templates/htmltemplate/escape_test.go::BenchmarkEscapedExecute",
      "config": {
        "warmup_time_ns": null,
        "min_round_time_ns": null,
        "max_time_ns": null,
        "max_rounds": null
      },
      "stats": "[stats]"
    },
    {
      "name": "BenchmarkHTMLNospaceEscaper",
      "uri": "tpl/internal/go_templates/htmltemplate/html_test.go::BenchmarkHTMLNospaceEscaper",
      "config": {
        "warmup_time_ns": null,
        "min_round_time_ns": null,
        "max_time_ns": null,
        "max_rounds": null
      },
      "stats": "[stats]"
    },
    {
      "name": "BenchmarkHTMLNospaceEscaperNoSpecials",
      "uri": "tpl/internal/go_templates/htmltemplate/html_test.go::BenchmarkHTMLNospaceEscaperNoSpecials",
      "config": {
        "warmup_time_ns": null,
        "min_round_time_ns": null,
        "max_time_ns": null,
        "max_rounds": null
      },
      "stats": "[stats]"
    },
    {
      "name": "BenchmarkJSRegexpEscaper",
      "uri": "tpl/internal/go_templates/htmltemplate/js_test.go::BenchmarkJSRegexpEscaper",
      "config": {
        "warmup_time_ns": null,
        "min_round_time_ns": null,
        "max_time_ns": null,
        "max_rounds": null
      },
      "stats": "[stats]"
    },
    {
      "name": "BenchmarkJSRegexpEscaperNoSpecials",
      "uri": "tpl/internal/go_templates/htmltemplate/js_test.go::BenchmarkJSRegexpEscaperNoSpecials",
      "config": {
        "warmup_time_ns": null,
        "min_round_time_ns": null,
        "max_time_ns": null,
        "max_rounds": null
      },
      "stats": "[stats]"
    },
    {
      "name": "BenchmarkJSStrEscaper",
      "uri": "tpl/internal/go_templates/htmltemplate/js_test.go::BenchmarkJSStrEscaper",
      "config": {
        "warmup_time_ns": null,
        "min_round_time_ns": null,
        "max_time_ns": null,
        "max_rounds": null
      },
      "stats": "[stats]"
    },
    {
      "name": "BenchmarkJSStrEscaperNoSpecials",
      "uri": "tpl/internal/go_templates/htmltemplate/js_test.go::BenchmarkJSStrEscaperNoSpecials",
      "config": {
        "warmup_time_ns": null,
        "min_round_time_ns": null,
        "max_time_ns": null,
        "max_rounds": null
      },
      "stats": "[stats]"
    },
    {
      "name": "BenchmarkJSValEscaperWithNum",
      "uri": "tpl/internal/go_templates/htmltemplate/js_test.go::BenchmarkJSValEscaperWithNum",
      "config": {
        "warmup_time_ns": null,
        "min_round_time_ns": null,
        "max_time_ns": null,
        "max_rounds": null
      },
      "stats": "[stats]"
    },
    {
      "name": "BenchmarkJSValEscaperWithObj",
      "uri": "tpl/internal/go_templates/htmltemplate/js_test.go::BenchmarkJSValEscaperWithObj",
      "config": {
        "warmup_time_ns": null,
        "min_round_time_ns": null,
        "max_time_ns": null,
        "max_rounds": null
      },
      "stats": "[stats]"
    },
    {
      "name": "BenchmarkJSValEscaperWithObjNoSpecials",
      "uri": "tpl/internal/go_templates/htmltemplate/js_test.go::BenchmarkJSValEscaperWithObjNoSpecials",
      "config": {
        "warmup_time_ns": null,
        "min_round_time_ns": null,
        "max_time_ns": null,
        "max_rounds": null
      },
      "stats": "[stats]"
    },
    {
      "name": "BenchmarkJSValEscaperWithStr",
      "uri": "tpl/internal/go_templates/htmltemplate/js_test.go::BenchmarkJSValEscaperWithStr",
      "config": {
        "warmup_time_ns": null,
        "min_round_time_ns": null,
        "max_time_ns": null,
        "max_rounds": null
      },
      "stats": "[stats]"
    },
    {
      "name": "BenchmarkJSValEscaperWithStrNoSpecials",
      "uri": "tpl/internal/go_templates/htmltemplate/js_test.go::BenchmarkJSValEscaperWithStrNoSpecials",
      "config": {
        "warmup_time_ns": null,
        "min_round_time_ns": null,
        "max_time_ns": null,
        "max_rounds": null
      },
      "stats": "[stats]"
    },
    {
      "name": "BenchmarkSrcsetFilter",
      "uri": "tpl/internal/go_templates/htmltemplate/url_test.go::BenchmarkSrcsetFilter",
      "config": {
        "warmup_time_ns": null,
        "min_round_time_ns": null,
        "max_time_ns": null,
        "max_rounds": null
      },
      "stats": "[stats]"
    },
    {
      "name": "BenchmarkSrcsetFilterNoSpecials",
      "uri": "tpl/internal/go_templates/htmltemplate/url_test.go::BenchmarkSrcsetFilterNoSpecials",
      "config": {
        "warmup_time_ns": null,
        "min_round_time_ns": null,
        "max_time_ns": null,
        "max_rounds": null
      },
      "stats": "[stats]"
    },
    {
      "name": "BenchmarkStripTags",
      "uri": "tpl/internal/go_templates/htmltemplate/html_test.go::BenchmarkStripTags",
      "config": {
        "warmup_time_ns": null,
        "min_round_time_ns": null,
        "max_time_ns": null,
        "max_rounds": null
      },
      "stats": "[stats]"
    },
    {
      "name": "BenchmarkStripTagsNoSpecials",
      "uri": "tpl/internal/go_templates/htmltemplate/html_test.go::BenchmarkStripTagsNoSpecials",
      "config": {
        "warmup_time_ns": null,
        "min_round_time_ns": null,
        "max_time_ns": null,
        "max_rounds": null
      },
      "stats": "[stats]"
    },
    {
      "name": "BenchmarkTemplateSpecialTags",
      "uri": "tpl/internal/go_templates/htmltemplate/transition_test.go::BenchmarkTemplateSpecialTags",
      "config": {
        "warmup_time_ns": null,
        "min_round_time_ns": null,
        "max_time_ns": null,
        "max_rounds": null
      },
      "stats": "[stats]"
    },
    {
      "name": "BenchmarkURLEscaper",
      "uri": "tpl/internal/go_templates/htmltemplate/url_test.go::BenchmarkURLEscaper",
      "config": {
        "warmup_time_ns": null,
        "min_round_time_ns": null,
        "max_time_ns": null,
        "max_rounds": null
      },
      "stats": "[stats]"
    },
    {
      "name": "BenchmarkURLEscaperNoSpecials",
      "uri": "tpl/internal/go_templates/htmltemplate/url_test.go::BenchmarkURLEscaperNoSpecials",
      "config": {
        "warmup_time_ns": null,
        "min_round_time_ns": null,
        "max_time_ns": null,
        "max_rounds": null
      },
      "stats": "[stats]"
    },
    {
      "name": "BenchmarkURLNormalizer",
      "uri": "tpl/internal/go_templates/htmltemplate/url_test.go::BenchmarkURLNormalizer",
      "config": {
        "warmup_time_ns": null,
        "min_round_time_ns": null,
        "max_time_ns": null,
        "max_rounds": null
      },
      "stats": "[stats]"
    },
    {
      "name": "BenchmarkURLNormalizerNoSpecials",
      "uri": "tpl/internal/go_templates/htmltemplate/url_test.go::BenchmarkURLNormalizerNoSpecials",
      "config": {
        "warmup_time_ns": null,
        "min_round_time_ns": null,
        "max_time_ns": null,
        "max_rounds": null
      },
      "stats": "[stats]"
    }
  ]
}
