go-runner/src/snapshots/go_runner__integration_tests__assert_results_snapshots@hugo_3.snap
---
source: src/integration_tests.rs
expression: content
---
{
  "creator": {
    "name": "codspeed-go",
    "version": "0.1.0",
    "pid": "[pid]"
  },
  "instrument": {
    "type": "walltime"
  },
  "benchmarks": [
    {
      "name": "BenchmarkListString",
      "uri": "tpl/internal/go_templates/texttemplate/parse/parse_test.go::BenchmarkListString",
      "config": {
        "warmup_time_ns": null,
        "min_round_time_ns": null,
        "max_time_ns": null,
        "max_rounds": null
      },
      "stats": "[stats]"
    },
    {
      "name": "BenchmarkParseLarge",
      "uri": "tpl/internal/go_templates/texttemplate/parse/parse_test.go::BenchmarkParseLarge",
      "config": {
        "warmup_time_ns": null,
        "min_round_time_ns": null,
        "max_time_ns": null,
        "max_rounds": null
      },
      "stats": "[stats]"
    },
    {
      "name": "BenchmarkVariableString",
      "uri": "tpl/internal/go_templates/texttemplate/parse/parse_test.go::BenchmarkVariableString",
      "config": {
        "warmup_time_ns": null,
        "min_round_time_ns": null,
        "max_time_ns": null,
        "max_rounds": null
      },
      "stats": "[stats]"
    }
  ]
}
